--- a/src/main/resources/group16/smartflightcheckinkiosk/EnterFlight.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/EnterFlight.fxml
@@ -7,11 +7,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox fx:id="EnterFlight" prefHeight="250.0" prefWidth="330.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.EnterFlightController">
+<VBox fx:id="EnterFlight" prefHeight="250.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.EnterFlightController">
    <children>
-      <AnchorPane prefHeight="330.0" prefWidth="330.0">
+      <AnchorPane prefHeight="330.0" prefWidth="500.0">
          <children>
-         <GridPane layoutY="35.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="215.0" prefWidth="331.0">
+         <GridPane layoutX="219.0" layoutY="35.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="215.0" prefWidth="331.0">
          
            <columnConstraints>
              <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="10.0" prefWidth="600.0" />
@@ -27,6 +27,9 @@
                   <GridPane.margin>
                      <Insets left="80.0" />
                   </GridPane.margin>
+                     <font>
+                        <Font size="15.0" />
+                     </font>
                </Button>
                <TextField fx:id="FlightnumField" GridPane.rowIndex="1" GridPane.valignment="TOP">
                   <GridPane.margin>
@@ -37,6 +40,9 @@
                   <GridPane.margin>
                      <Insets right="80.0" />
                   </GridPane.margin>
+                     <font>
+                        <Font size="15.0" />
+                     </font>
                </Button>
                <Label prefHeight="37.0" prefWidth="237.0" text="Please enter the flight number:">
                   <GridPane.margin>
@@ -48,20 +54,25 @@
                </Label>
             </children>
          </GridPane>
-            <AnchorPane layoutY="-3.0" prefHeight="42.0" prefWidth="331.0" style="-fx-background-color: #78cefa;">
+            <AnchorPane prefHeight="42.0" prefWidth="550.0" style="-fx-background-color: #78cefa;">
                <children>
-                  <Text layoutX="41.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Back-end System" wrappingWidth="199.0">
+                  <Text layoutX="51.0" layoutY="28.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Back-end System" wrappingWidth="199.0">
                      <font>
                         <Font size="20.0" />
                      </font>
                   </Text>
-                  <ImageView fitHeight="21.0" fitWidth="21.0" layoutX="14.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="25.0" fitWidth="27.0" layoutX="14.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@img/plane_logo.png" />
+                        <Image url="@img/staff00.png" />
                      </image>
                   </ImageView>
                </children>
             </AnchorPane>
+            <ImageView fitHeight="118.0" fitWidth="115.0" layoutX="66.0" layoutY="78.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@img/staff03.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </children>
