--- a/src/main/resources/group16/smartflightcheckinkiosk/FlightList.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/FlightList.fxml
@@ -28,7 +28,7 @@
       </AnchorPane>
       <AnchorPane prefHeight="555.0" prefWidth="400.0">
          <children>
-            <Text layoutX="26.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Check-in Status on this flight:">
+            <Text layoutX="124.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Check-in Status on this flight:">
                <font>
                   <Font size="15.0" />
                </font>
@@ -117,11 +117,16 @@
                   <Font size="14.0" />
                </font>
             </Text>
-         <Button fx:id="b7" layoutX="247.0" layoutY="483.0" mnemonicParsing="false" onAction="#gotoCheckFlight" text="Go back">
+         <Button fx:id="b7" layoutX="230.0" layoutY="484.0" mnemonicParsing="false" onAction="#gotoCheckFlight" text="Go back">
                <font>
                   <Font size="16.0" />
                </font>
             </Button>
+            <ImageView fitHeight="52.0" fitWidth="53.0" layoutX="51.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@img/staff05.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </children>
