--- a/src/main/resources/group16/smartflightcheckinkiosk/CheckFlight.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/CheckFlight.fxml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox fx:id="CheckFlight" prefHeight="360.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.CheckFlightController">
+<VBox fx:id="CheckFlight" prefHeight="360.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.CheckFlightController">
    <children>
       <AnchorPane prefHeight="200.0" prefWidth="200.0">
          <children>
@@ -43,14 +41,13 @@
      <rowConstraints>
        <RowConstraints maxHeight="185.0" minHeight="10.0" prefHeight="93.0" vgrow="SOMETIMES" />
          <RowConstraints maxHeight="185.0" minHeight="10.0" prefHeight="53.0" vgrow="SOMETIMES" />
-       <RowConstraints maxHeight="242.0" minHeight="0.0" prefHeight="53.0" vgrow="SOMETIMES" />
          <RowConstraints maxHeight="242.0" minHeight="0.0" prefHeight="53.0" vgrow="SOMETIMES" />
          <RowConstraints maxHeight="242.0" minHeight="0.0" prefHeight="51.0" vgrow="SOMETIMES" />
          <RowConstraints maxHeight="300.0" minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
          <RowConstraints maxHeight="251.0" minHeight="10.0" prefHeight="106.0" vgrow="SOMETIMES" />
      </rowConstraints>
       <children>
-         <Button fx:id="b5" mnemonicParsing="false" onAction="#gotoEnterFlight" text="Go back" GridPane.halignment="LEFT" GridPane.rowIndex="6">
+         <Button fx:id="b5" mnemonicParsing="false" onAction="#gotoEnterFlight" text="Go back" GridPane.halignment="LEFT" GridPane.rowIndex="5">
             <GridPane.margin>
                <Insets left="100.0" />
             </GridPane.margin>
@@ -58,7 +55,7 @@
                   <Font size="16.0" />
                </font>
          </Button>
-         <Button fx:id="b6" mnemonicParsing="false" onAction="#gotoFlightList" text="  Next  " GridPane.halignment="RIGHT" GridPane.rowIndex="6" GridPane.valignment="CENTER">
+         <Button fx:id="b6" mnemonicParsing="false" onAction="#gotoFlightList" text="  Next  " GridPane.halignment="RIGHT" GridPane.rowIndex="5" GridPane.valignment="CENTER">
             <GridPane.margin>
                <Insets right="100.0" />
             </GridPane.margin>
@@ -82,7 +79,7 @@
                   <Font size="14.0" />
                </font>
          </Label>
-         <Label alignment="TOP_CENTER" contentDisplay="CENTER" text="DATE:" GridPane.rowIndex="2">
+         <Label alignment="TOP_CENTER" contentDisplay="CENTER" text="BOARDING:" GridPane.rowIndex="2">
             <GridPane.margin>
                <Insets left="50.0" />
             </GridPane.margin>
@@ -90,15 +87,7 @@
                   <Font size="14.0" />
                </font>
          </Label>
-         <Label alignment="TOP_CENTER" contentDisplay="CENTER" text="BOARDING:" GridPane.rowIndex="3">
-            <GridPane.margin>
-               <Insets left="50.0" />
-            </GridPane.margin>
-               <font>
-                  <Font size="14.0" />
-               </font>
-         </Label>
-         <Label alignment="TOP_CENTER" contentDisplay="CENTER" text="ROUTE:" GridPane.rowIndex="4">
+         <Label alignment="TOP_CENTER" contentDisplay="CENTER" text="ROUTE:" GridPane.rowIndex="3">
             <GridPane.margin>
                <Insets left="50.0" />
             </GridPane.margin>
@@ -114,15 +103,7 @@
                   <Font size="14.0" />
                </font>
             </Text>
-            <Text fx:id="Date" fill="BLUE" layoutX="1400.0" strokeType="OUTSIDE" strokeWidth="0.0" text="String Date " GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets left="160.0" />
-               </GridPane.margin>
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Text>
-            <Text fx:id="Time" fill="BLUE" strokeType="OUTSIDE" strokeWidth="0.0" text="String BoardingTime" GridPane.rowIndex="3">
+            <Text fx:id="Time" fill="BLUE" strokeType="OUTSIDE" strokeWidth="0.0" text="String BoardingTime" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="220.0" />
                </GridPane.margin>
@@ -130,7 +111,7 @@
                   <Font size="14.0" />
                </font>
             </Text>
-            <Text fx:id="Startpoint" fill="BLUE" strokeType="OUTSIDE" strokeWidth="0.0" text="String StartPoint" GridPane.rowIndex="4">
+            <Text fx:id="Startpoint" fill="BLUE" strokeType="OUTSIDE" strokeWidth="0.0" text="String StartPoint" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets left="160.0" />
                </GridPane.margin>
@@ -138,7 +119,7 @@
                   <Font size="14.0" />
                </font>
             </Text>
-            <Label alignment="TOP_CENTER" contentDisplay="CENTER" text="TO" GridPane.rowIndex="4">
+            <Label alignment="TOP_CENTER" contentDisplay="CENTER" text="TO" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets left="280.0" />
                </GridPane.margin>
@@ -146,7 +127,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Text fx:id="Destination" fill="BLUE" strokeType="OUTSIDE" strokeWidth="0.0" text="String Destination" GridPane.rowIndex="4">
+            <Text fx:id="Destination" fill="BLUE" strokeType="OUTSIDE" strokeWidth="0.0" text="String Destination" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets left="320.0" />
                </GridPane.margin>
