--- a/src/main/resources/group16/smartflightcheckinkiosk/FlightList.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/FlightList.fxml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox fx:id="FlightList" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.FlightListController">
+<VBox fx:id="FlightList" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.FlightListController">
    <children>
       <AnchorPane prefHeight="45.0" prefWidth="200.0" style="-fx-background-color: #78cafa;">
          <children>
@@ -48,7 +46,7 @@
                   <Font size="14.0" />
                </font>
             </Text>
-            <Text fx:id="Statusfield1" layoutX="433.0" layoutY="167.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Char Status" wrappingWidth="95.46875">
+            <Text fx:id="Statusfield1" layoutX="433.0" layoutY="167.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="95.46875">
                <font>
                   <Font size="14.0" />
                </font>
