--- a/src/main/resources/group16/smartflightcheckinkiosk/StaffLogin.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/StaffLogin.fxml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox fx:id="StaffLogin" prefHeight="300.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.StaffLoginController">
+<VBox fx:id="StaffLogin" prefHeight="300.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.StaffLoginController">
     <children>
         <AnchorPane prefHeight="310.0" prefWidth="783.0">
            <children>
@@ -46,7 +49,7 @@
                <font>
                   <Font size="14.0" />
                </font></Button>
-            <TextField layoutX="470.0" layoutY="181.0" prefHeight="29.0" prefWidth="222.0">
+            <TextField fx:id="passwordfield" layoutX="470.0" layoutY="181.0" prefHeight="29.0" prefWidth="222.0">
                <font>
                   <Font size="14.0" />
                </font>
