--- a/src/main/resources/group16/smartflightcheckinkiosk/StaffLogin.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/StaffLogin.fxml
@@ -41,7 +41,7 @@
                <font>
                   <Font size="14.0" />
                </font></TextField>
-              <Button fx:id="b1" layoutX="450.0" layoutY="250.0" mnemonicParsing="false" onAction="#gotoChooseLogin" text="Go back">
+              <Button fx:id="b1" layoutX="450.0" layoutY="250.0" mnemonicParsing="false" onAction="#gotoChooseLogin" text="  Back  ">
                <font>
                   <Font size="14.0" />
                </font></Button>
