--- a/src/main/resources/group16/smartflightcheckinkiosk/CheckFlight.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/CheckFlight.fxml
@@ -47,7 +47,7 @@
          <RowConstraints maxHeight="251.0" minHeight="10.0" prefHeight="106.0" vgrow="SOMETIMES" />
      </rowConstraints>
       <children>
-         <Button fx:id="b5" mnemonicParsing="false" onAction="#gotoEnterFlight" text="Go back" GridPane.halignment="LEFT" GridPane.rowIndex="5">
+         <Button fx:id="b5" mnemonicParsing="false" onAction="#gotoEnterFlight" text="  Back  " GridPane.halignment="LEFT" GridPane.rowIndex="5">
             <GridPane.margin>
                <Insets left="100.0" />
             </GridPane.margin>
