--- a/src/main/resources/group16/smartflightcheckinkiosk/FlightList.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/FlightList.fxml
@@ -115,7 +115,7 @@
                   <Font size="14.0" />
                </font>
             </Text>
-         <Button fx:id="b7" layoutX="230.0" layoutY="484.0" mnemonicParsing="false" onAction="#gotoCheckFlight" text="Go back">
+         <Button fx:id="b7" layoutX="230.0" layoutY="484.0" mnemonicParsing="false" onAction="#gotoCheckFlight" text="  Back  ">
                <font>
                   <Font size="16.0" />
                </font>
