--- a/src/main/resources/group16/smartflightcheckinkiosk/FlightList.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/FlightList.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -8,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox fx:id="FlightList" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.FlightListController">
+<VBox fx:id="FlightList" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.FlightListController">
    <children>
       <AnchorPane prefHeight="45.0" prefWidth="200.0" style="-fx-background-color: #78cafa;">
          <children>
@@ -125,6 +130,16 @@
                   <Image url="@img/staff05.png" />
                </image>
             </ImageView>
+            <Text layoutX="55.0" layoutY="450.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Uncheck-in number：">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Text>
+            <Text fill="RED" layoutX="215.0" layoutY="450.0" strokeType="OUTSIDE" strokeWidth="0.0" text="int UncheckNum">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Text>
          </children>
       </AnchorPane>
    </children>
