--- a/src/main/resources/group16/smartflightcheckinkiosk/Success.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/Success.fxml
@@ -7,17 +7,14 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="group16.smartflightcheckinkiosk.Controller.SuccessController"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane prefHeight="100.0" prefWidth="230.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.SuccessController">
     <children>
         <ImageView fitHeight="36.0" fitWidth="36.0" layoutX="28.0" layoutY="29.0">
             <image>
                 <Image url="@img/Success.png" />
             </image>
         </ImageView>
-        <Label layoutX="78.0" layoutY="35.0" prefHeight="30.0" prefWidth="142.0" text="Success" textFill="#f20404">
+        <Label layoutX="78.0" layoutY="35.0" prefHeight="30.0" prefWidth="142.0" text="Success!" textFill="darkseagreen">
             <font>
                 <Font name="Myanmar MN" size="13.0" />
             </font>
